--- a/Modelo_NJ_LSTM.ipynb
+++ b/Modelo_NJ_LSTM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJDzS0NCPgL2G2l9uPqbmp",
+      "authorship_tag": "ABX9TyMYUvvrcWGdEpQ2hyQDwJaG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Bh8GGp6GDV9k"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
     }
   ]
 }
