--- a/Modelo_NJ_LSTM.ipynb
+++ b/Modelo_NJ_LSTM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYUvvrcWGdEpQ2hyQDwJaG",
+      "authorship_tag": "ABX9TyPEUlSqMO+U7PLvxElOPU/M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "Bh8GGp6GDV9k"
       },
       "outputs": [],
       "source": [
-        "import numpy as np"
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n"
       ]
     }
   ]
